--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body{
     background-color: cadetblue;
     background-image: url(../imagens/2111.w039.n003.5B.p1.5.jpg);
-    background-size: cover;
+    background-size: 40%;
     font-family: 'IBM Plex Mono', monospace;
 }
 header{
